# ShortLy

./: .flake8  .gitignore  Makefile  README.md  local.env  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 9f5233c3b133_create_user_permission_and_user_permission_tables.py
app/: main.py
app/Responses/: status_response.py
app/configurations/: database.py  settings.py
app/constants/: general_constants.py
app/controllers/: __init__.py  health_controller.py
app/dtos/: message_dto.py
app/responses/: error_response.py  successful_response.py
core/: settings.py  urls.py
