[tool.poetry]
name = "shortly"
version = "0.1.0"
description = "Url shortener"
authors = ["yazgiraldoa <edygiraldo.97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
